tests/snapshots/cli_help__cli_help_auth_bearer.snap
---
source: tests/cli_help.rs
assertion_line: 13
expression: normalize_help_output(&stdout)
---
Print the daemon's current Spotify Web API bearer token.

The daemon mints tokens via librespot keymaster + login5 and holds them in memory; this command surfaces the current one so you can probe `api.spotify.com` directly. Treat the output as a secret — by default it goes to stdout for the immediate caller, not the daemon log.

Usage: spotuify auth bearer [OPTIONS]

Options:
      --force
          Force minting a fresh bearer even if the cached one is still valid. Use after a `logout` + `login` round-trip

      --log-format <LOG_FORMAT>
          Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT`

          [possible values: text, json]

      --format <FORMAT>
          Output format. `table` prints just the token; `json` wraps it for piping into `jq`

          [default: table]
          [possible values: table, json, jsonl, csv, ids]

      --no-daemon-start
          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing

  -o, --set <key.path=value>
          Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged

  -h, --help
          Print help (see a summary with '-h')
